--- a/s.1
+++ b/s.1
@@ -4,23 +4,21 @@ NAME
 s \- jump around
 .SH
 SYNOPSIS
-s [\-chlrtx] [regex1 regex2 ... regexn]
+s [\-hlrt] [regex1 regex2 ... regexn]
 .SH
 AVAILABILITY
 bash, ssh
 .SH
 DESCRIPTION
-Tracks your most used directories, based on 'frecency'.
+Tracks your most used hosts, based on 'frecency'.
 .P
 After a short learning phase, \fBs\fR will take you to the most 'frecent'
-directory that matches ALL of the regexes given on the command line, in order.
+host that matches ALL of the regexes given on the command line, in order.
 
 For example, \fBs foo bar\fR would match \fB/foo/bar\fR but not \fB/bar/foo\fR.
 .SH
 OPTIONS
 .TP
-\fB\-c\fR
-restrict matches to subdirectories of the current directory
 .TP
 \fB\-h\fR
 show a brief help message
@@ -33,25 +31,22 @@ match by rank only
 .TP
 \fB\-t\fR
 match by recent access only
-.TP
-\fB\-x\fR
-remove the current directory from the datafile
 .SH EXAMPLES
 .TP 14
 \fBs foo\fR
-cd to most frecent dir matching foo
+ssh to most frecent host matching foo
 .TP 14
 \fBs foo bar\fR
-cd to most frecent dir matching foo, then bar
+ssh to most frecent host matching foo, then bar
 .TP 14
 \fBs -r foo\fR
-cd to highest ranked dir matching foo
+ssh to highest ranked host matching foo
 .TP 14
 \fBs -t foo\fR
-cd to most recently accessed dir matching foo
+ssh to most recently accessed host matching foo
 .TP 14
 \fBs -l foo\fR
-list all dirs matching foo (by frecency)
+list all hosts matching foo (by frecency)
 .SH
 NOTES
 .SS
@@ -63,7 +58,7 @@ Put something like this in your \fB$HOME/.bashrc\fR or \fB$HOME/.sshrc\fR:
 \fB. /path/to/s.sh\fR
 .RE
 .P
-\fBcd\fR around for a while to build up the db.
+\fBssh\fR around for a while to build up the db.
 .P
 PROFIT!!
 .P
@@ -81,7 +76,7 @@ Set \fB$_S_NO_RESOLVE_SYMLINKS\fR to prevent symlink resolution.
 Set \fB$_S_NO_PROMPT_COMMAND\fR to handle \fBPROMPT_COMMAND/precmd\fR yourself.
 .RE
 .RS
-Set \fB$_S_EXCLUDE_DIRS\fR to an array of directory trees to exclude.
+Set \fB$_S_EXCLUDE_DIRS\fR to an array of host to exclude.
 .RE
 .RS
 Set \fB$_S_OWNER\fR to allow usage when in 'sudo -s' mode.
@@ -94,7 +89,7 @@ Install the provided man page \fBs.1\fR somewhere like \fB/usr/local/man/man1\fR
 .RE
 .SS
 Aging:
-The rank of directories maintained by \fBs\fR undergoes aging based on a simple
+The rank of hosts maintained by \fBs\fR undergoes aging based on a simple
 formula. The rank of each entry is incremented every time it is accessed. When
 the sum of ranks is over 9000, all ranks are multiplied by 0.99. Entries with a
 rank lower than 1 are forgotten.
@@ -104,26 +99,26 @@ Frecency is a portmanteau of 'recent' and 'frequency'. It is a weighted rank
 that depends on how often and how recently something occurred. As far as I
 know, Mosilla came up with the term.
 .P
-To \fBs\fR, a directory that has low ranking but has been accessed recently
-will quickly have higher rank than a directory accessed frequently a long time
+To \fBs\fR, a host that has low ranking but has been accessed recently
+will quickly have higher rank than a host accessed frequently a long time
 ago.
 .P
 Frecency is determined at runtime.
 .SS
 Common:
-When multiple directories match all queries, and they all have a common prefix,
-\fBs\fR will cd to the shortest matching directory, without regard to priority.
+When multiple hosts match all queries, and they all have a common prefix,
+\fBs\fR will ssh to the shortest matching host, without regard to priority.
 This has been in effect, if undocumented, for quite some time, but should
 probably be configurable or reconsidered.
 .SS
 Tab Completion:
 \fBs\fR supports tab completion. After any number of arguments, press TAB to
-complete on directories that match each argument. Due to limitations of the
+complete on hosts that match each argument. Due to limitations of the
 completion implementations, only the last argument will be completed in the
 shell.
 .P
 Internally, \fBs\fR decides you've requested a completion if the last argument
-passed is an absolute path to an existing directory. This may cause unexpected
+passed is an absolute path to an existing host. This may cause unexpected
 behavior if the last argument to \fBs\fR begins with \fB/\fR.
 .SH
 ENVIRONMENT
@@ -147,7 +142,7 @@ The environment variable \fB$_S_NO_PROMPT_COMMAND\fR can be set if you want to
 handle \fBPROMPT_COMMAND\fR or \fBprecmd\fR yourself.
 .P
 The environment variable \fB$_S_EXCLUDE_DIRS\fR can be set to an array of
-directory trees to exclude from tracking. \fB$HOME\fR is always excluded.
+host trees to exclude from tracking. \fB$HOME\fR is always excluded.
 Directories must be full paths without trailing slashes.
 .P
 The environment variable \fB$_S_OWNER\fR can be set to your username, to
@@ -156,7 +151,7 @@ allow usage of \fBs\fR when your sudo enviroment keeps \fB$HOME\fR set.
 FILES
 Data is stored in \fB$HOME/.s\fR. This can be overridden by setting the
 \fB$_S_DATA\fR environment variable. When initialised, \fBs\fR will raise an
-error if this path is a directory, and not function correctly.
+error if this path is a host, and not function correctly.
 .P
 A man page (\fBs.1\fR) is provided.
 .SH
