--- a/s.1
+++ b/s.1
@@ -155,6 +155,6 @@ error if this path is a host, and not function correctly.
 A man page (\fBs.1\fR) is provided.
 .SH
 SEE ALSO
-regex(7), pushd, popd, autojump, cdargs
+regex(7), ssh
 .P
 Please file bugs at https://github.com/haosdent/s/
